[Bug Fix] : Fixes #340 - Support Center Contact number not visible (helpline-num-fix) (#365)
* helpline-num-fix

* 2

--- a/src/components/header/nav/nav.css
+++ b/src/components/header/nav/nav.css
@@ -266,3 +266,9 @@ nav .all_menu li {
   font-size: 25px;
   text-decoration: none;
 }
+
+/* CSS file */
+.bold-h4 {
+  font-weight: bold;
+  color: #191717;
+}
